# learn-c-the-good-way

./: .gitignore  CMakeLists.txt
assets/shaders/: color.frag  color.vert  text.frag  text.vert
include/: Line.h  render.h  renderImpl.h  util.h  vec.h
include/glad/: glad.h
src/: glad.c  main.cpp  render.cpp  renderImpl.cpp  util.cpp  vec.cpp
